fix: adjust styling of contenteditable divs to better align caret and placeholder text.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,8 @@
 .item-note {
     display: none;
     font-style: italic;
-    text-indent: 10px;
+    padding-left: 10px;
+    /* text-indent: 10px; */
     /* margin-bottom: 0.5rem; */
 }
 /* placeholder code for item note */
@@ -60,14 +61,6 @@
 
 .item-note-display-toggle {
     display: block;
-}
-
-
-.item-note {
-    display: none;
-    font-style: italic;
-    text-indent: 10px;
-    /* margin-bottom: 0.5rem; */
 }
 
 .save-button {
